Revert "Remove deprecated built-in spectests"
This reverts commit a433012ec33f7487cfa936e3920df24fe0c9d5c5.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,6 +57,11 @@ if (BUILD_EMULATOR)
             src/Edward/RFC.cpp
     )
 
+    set(TEST_FRAMEWORK
+            tests/integration/wasm_tests.cpp
+            tests/integration/assertion.cpp
+            tests/integration/sexpr-parser/src/sexpr.c)
+
     add_definitions(-DINFO=0)
     add_definitions(-DDEBUG=0)
     add_definitions(-DTRACE=0)
@@ -68,7 +73,7 @@ if (BUILD_EMULATOR)
     endif (CMAKE_COMPILER_IS_GNUCXX)
 
     # WARDuino CLI
-    add_executable(wdcli platforms/CLI-Emulator/main.cpp ${SOURCE_FILES})
+    add_executable(wdcli platforms/CLI-Emulator/main.cpp ${SOURCE_FILES} ${TEST_FRAMEWORK})
     target_link_libraries(wdcli PRIVATE Threads::Threads)
     target_include_directories(wdcli PRIVATE ${EXTERNAL_LIB_HEADERS} "${PROJECT_BINARY_DIR}/include")
 endif (BUILD_EMULATOR)
@@ -115,7 +120,7 @@ if (BUILD_UNITTEST)
     set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
     FetchContent_MakeAvailable(googletest)
 
-    set(PATH_TO_UNIT_TEST ${PROJECT_SOURCE_DIR}/tests/unit)
+    set(PATH_TO_UNIT_TEST ${PROJECT_SOURCE_DIR}/tests/vm_unit_tests)
 
     aux_source_directory(${PATH_TO_UNIT_TEST}/shared/ SHARED_SRC)
 
