Add `-Werror` flag to emu compilation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,7 +64,7 @@ if (BUILD_EMULATOR)
 
     # Set default compile flags for GCC
     if (CMAKE_COMPILER_IS_GNUCXX)
-        add_compile_options(-g -v -Wall -Wextra -Wunused -O3)
+        add_compile_options(-g -v -Wall -Wextra -Werror -Wunused -O3)
     endif (CMAKE_COMPILER_IS_GNUCXX)
 
     # WARDuino CLI
