--- a/platforms/Zephyr/CMakeLists.txt
+++ b/platforms/Zephyr/CMakeLists.txt
@@ -20,6 +20,7 @@ target_sources(app PRIVATE
     ../../src/Interpreter/interpreter.cpp
     ../../src/Primitives/zephyr.cpp
     ../../src/Primitives/Mindstorms/Motor.cpp
+    ../../src/Primitives/Mindstorms/uart_sensor.cpp
     ../../src/Memory/mem.cpp
     ../../src/Utils/util.cpp
     ../../src/Utils/util_arduino.cpp
