Added some WIP fun primitives to draw things using SDL2
Currently uses a hardcoded bitmap file which should of course be fixed. The
primitives here are also not really designed for microcontrollers so this
currently isn't really planned to be merged, it's just to make some fun
WARDuino projects on the desktop for testing purposes.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,6 +70,7 @@ if (BUILD_EMULATOR)
     # WARDuino CLI
     add_executable(wdcli platforms/CLI-Emulator/main.cpp ${SOURCE_FILES})
     target_link_libraries(wdcli PRIVATE Threads::Threads)
+    target_link_libraries(wdcli PRIVATE SDL2)
     target_include_directories(wdcli PRIVATE ${EXTERNAL_LIB_HEADERS} "${PROJECT_BINARY_DIR}/include")
 endif (BUILD_EMULATOR)
 
