fixup! Refactor Edward -> Oop

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,9 +53,9 @@ if (BUILD_EMULATOR)
             src/Utils/macros.cpp
             src/Utils/sockets.cpp
             src/Debug/debugger.cpp
-            src/Edward/proxy.cpp
-            src/Edward/proxy_supervisor.cpp
-            src/Edward/RFC.cpp
+            src/Oop/proxy.cpp
+            src/Oop/proxy_supervisor.cpp
+            src/Oop/RFC.cpp
     )
 
     add_definitions(-DINFO=0)
@@ -95,9 +95,9 @@ if (BUILD_UNITTEST)
             src/Utils/macros.cpp
             src/Utils/sockets.cpp
             src/Debug/debugger.cpp
-            src/Edward/proxy.cpp
-            src/Edward/proxy_supervisor.cpp
-            src/Edward/RFC.cpp
+            src/Oop/proxy.cpp
+            src/Oop/proxy_supervisor.cpp
+            src/Oop/RFC.cpp
     )
 
     # Set default compile flags for GCC
