--- a/tutorials/assemblyscript/main/CMakeLists.txt
+++ b/tutorials/assemblyscript/main/CMakeLists.txt
@@ -4,9 +4,9 @@ set(SOURCE_FILES
         ../../../src/Utils/util_arduino.cpp
         ../../../src/Utils/sockets.cpp
         ../../../src/Debug/debugger.cpp
-        ../../../src/Edward/proxy.cpp
-        ../../../src/Edward/proxy_supervisor.cpp
-        ../../../src/Edward/RFC.cpp
+        ../../../src/Oop/proxy.cpp
+        ../../../src/Oop/proxy_supervisor.cpp
+        ../../../src/Oop/RFC.cpp
         ../../../src/Utils/macros.cpp
         ../../../src/WARDuino/WARDuino.cpp
         ../../../src/Primitives/emulated.cpp
