--- a/platforms/Zephyr/prj.conf
+++ b/platforms/Zephyr/prj.conf
@@ -30,3 +30,7 @@ CONFIG_CONSOLE_PUTCHAR_BUFSIZE=4096
 
 CONFIG_POSIX_API=y
 CONFIG_MAIN_STACK_SIZE=8192
+
+CONFIG_LOG=y
+CONFIG_LED_STRIP=y
+CONFIG_LED_STRIP_LOG_LEVEL_DBG=n
