Enable CONFIG_STM32_ENABLE_DEBUG_SLEEP_STOP to allow flashing the board at all times without reset
(Increases power consumption so should be disabled if power consumption is important, for example when just using open bot brain in a classroom)

--- a/platforms/Zephyr/prj.conf
+++ b/platforms/Zephyr/prj.conf
@@ -30,3 +30,7 @@ CONFIG_CONSOLE_PUTCHAR_BUFSIZE=4096
 
 CONFIG_POSIX_API=y
 CONFIG_MAIN_STACK_SIZE=8192
+
+# Allow flashing the board without reset (increases power consumption so should only be used for development)
+CONFIG_STM32_ENABLE_DEBUG_SLEEP_STOP=y
+
