Open Bot Brain primitives for motors + color sensor (#285)
* Add open bot brain Zephyr primitives

* Move some motor code into a separate file

* Refactor motor code a bit more by creating a Motor class that does most of the work

* Only use one interrupt for the motor encoders instead of two, this also resolves the conflict with motor c and the other motors!

So now you can control all 4 motors at the same time!

* Enable CONFIG_STM32_ENABLE_DEBUG_SLEEP_STOP to allow flashing the board at all times without reset

(Increases power consumption so should be disabled if power consumption is important, for example when just using open bot brain in a classroom)

* Clean up color sensor code a bit

* Rename colour_sensor to color_sensor + add abort primitive + set heartbeat interval to 990ms instead of 1000

* Minor cleanup

* Move sensor setup into separate function

* Move most of the color sensor code into the uart_sensor files

* Fix case where invalid data was read from the sensor

* Move uart sensor data into a struct

By doing so you could theoretically now have multiple uart sensors working at the same time.

* Misc type conversions

* Invert motor direction to match the forward direction used by Lego themselves

* Update motor primitives to all have the port and speed first and other arguments later + add stop_motor

Also removed the brake argument on drive_motor, to stop the motor you now use the stop_motor primitive.

* Put open bot brain primitives in an ifdef for the board

* Use DT_FOREACH_PROP_ELEM_SEP to get all pwm specs

* Don't hardcode the number of motors

* Run clang-tidy

* Place mindstorms file under ifndef ARDUINO

* Read debug messages in debug thread again instead of timer interrupt (Seems to work correctly now?)

* clang-format

* Make print_int print signed integers

* Make color_sensor push signed integers

* Support data messages consisting of two bytes

* Fix color sensors no longer working because they send 2^0 bytes instead of 2^1

* Conf

--- a/platforms/Zephyr/CMakeLists.txt
+++ b/platforms/Zephyr/CMakeLists.txt
@@ -19,6 +19,8 @@ target_sources(app PRIVATE
     ../../src/Interpreter/instructions.cpp
     ../../src/Interpreter/interpreter.cpp
     ../../src/Primitives/zephyr.cpp
+    ../../src/Primitives/Mindstorms/Motor.cpp
+    ../../src/Primitives/Mindstorms/uart_sensor.cpp
     ../../src/Memory/mem.cpp
     ../../src/Utils/util.cpp
     ../../src/Utils/util_arduino.cpp
