Use SDL_Image to load image
This way we can now also load transparent images such as png's.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,6 +73,7 @@ if (BUILD_EMULATOR)
     target_link_libraries(wdcli PRIVATE SDL2)
     target_link_libraries(wdcli PRIVATE SDL2_ttf)
     target_link_libraries(wdcli PRIVATE SDL2_mixer)
+    target_link_libraries(wdcli PRIVATE SDL2_image)
     target_include_directories(wdcli PRIVATE ${EXTERNAL_LIB_HEADERS} "${PROJECT_BINARY_DIR}/include")
 endif (BUILD_EMULATOR)
 
