Add basic wroom overlay + misc changes

--- a/platforms/Zephyr/prj.conf
+++ b/platforms/Zephyr/prj.conf
@@ -34,3 +34,5 @@ CONFIG_MAIN_STACK_SIZE=8192
 # Allow flashing the board without reset (increases power consumption so should only be used for development)
 CONFIG_STM32_ENABLE_DEBUG_SLEEP_STOP=y
 
+# This needs to be enabled for older espressif boards
+#CONFIG_ESP32_USE_UNSUPPORTED_REVISION=y
