Zephyr ESP32 support (#318)
* Initial work on getting the ESP32 to work on zephyr

* Rename overlay file

* Add build instructions Zephyr

* 🎨 Clang format `main.cpp`

* Add esp32 c3 super mini overlay

* Re-enable debugger thread

Appears to work fine on the esp32 c3 super mini

* Add basic wroom overlay + misc changes

* Add wrover kit overlay

* Renamed overlay files to work out of the box for the wrover kit, devkitc_wrover and devkitc_wroom

* Disable trace mode by default

* clang-format

* Fix support for rpi_pico and stm32l496g_disco boards

De cdc acm and console is now configured at the board level instead of globally.

* Update README

---------

Co-authored-by: tolauwae <Tom.Lauwaerts@UGent.be>

--- a/platforms/Zephyr/CMakeLists.txt
+++ b/platforms/Zephyr/CMakeLists.txt
@@ -33,4 +33,9 @@ target_sources(app PRIVATE
     upload.h
 )
 
+add_definitions(-DINFO=0)
+add_definitions(-DDEBUG=0)
+add_definitions(-DTRACE=0)
+add_definitions(-DWARN=0)
+
 include_directories(../../lib/json/single_include/)
