Use custom version of the action

--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -132,8 +132,7 @@ jobs:
           with:
             submodules: 'recursive'
         - name: Build WARDuino for Zephyr
-          uses: zephyrproject-rtos/action-zephyr-setup@v1
+          uses: MaartenS11/action-zephyr-setup@main
           with:
             app-path: app
             toolchains: arm-zephyr-eabi
-  
