Update wabt submodule URL to use HTTPS

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/nlohmann/json
 [submodule "lib/wabt"]
 	path = lib/wabt
-	url = git@github.com:TOPLLab/wabt.git
+	url = https://github.com/TOPLLab/wabt.git
