Add basic display primitives for zephyr
Currently designed for 16bit color displays (buffer size needs to be changed for others).

Can be disabled by setting CONFIG_DISPLAY to 'n'.

--- a/platforms/Zephyr/prj.conf
+++ b/platforms/Zephyr/prj.conf
@@ -37,3 +37,5 @@ CONFIG_STM32_ENABLE_DEBUG_SLEEP_STOP=y
 
 # This needs to be enabled for older espressif boards
 #CONFIG_ESP32_USE_UNSUPPORTED_REVISION=y
+
+CONFIG_DISPLAY=y
