Add int_random and millis

--- a/platforms/Zephyr/prj.conf
+++ b/platforms/Zephyr/prj.conf
@@ -38,4 +38,8 @@ CONFIG_STM32_ENABLE_DEBUG_SLEEP_STOP=y
 # This needs to be enabled for older espressif boards
 #CONFIG_ESP32_USE_UNSUPPORTED_REVISION=y
 
+# Display drivers
 CONFIG_DISPLAY=y
+
+# Needed for random number generation primitives
+CONFIG_ENTROPY_GENERATOR=y
