--- a/platforms/Zephyr/prj.conf
+++ b/platforms/Zephyr/prj.conf
@@ -43,3 +43,36 @@ CONFIG_DISPLAY=y
 
 # Needed for random number generation primitives
 CONFIG_ENTROPY_GENERATOR=y
+
+# Wifi
+CONFIG_NETWORKING=y
+CONFIG_NET_MGMT=y
+# Optional but useful
+CONFIG_NET_MGMT_EVENT=y
+CONFIG_NET_MGMT_EVENT_INFO=y
+
+CONFIG_WIFI=y
+CONFIG_NET_L2_WIFI_MGMT=y
+#CONFIG_WIFI_SHELL=n
+#CONFIG_NET_L2_WIFI=y
+
+CONFIG_NET_IPV4=y
+CONFIG_NET_IPV6=n
+
+CONFIG_NET_PKT_RX_COUNT=10
+CONFIG_NET_PKT_TX_COUNT=10
+CONFIG_NET_BUF_RX_COUNT=20
+CONFIG_NET_BUF_TX_COUNT=20
+CONFIG_NET_MAX_CONTEXTS=10
+
+CONFIG_NET_DHCPV4=y
+CONFIG_NET_DHCPV4_LOG_LEVEL_INF=y
+CONFIG_NET_IPV4_LOG_LEVEL_DBG=y
+CONFIG_NET_DHCPV4_LOG_LEVEL_DBG=y
+
+CONFIG_WIFI_CREDENTIALS=y
+CONFIG_WIFI_CREDENTIALS_STATIC=y
+CONFIG_WIFI_CREDENTIALS_STATIC_SSID="Oneplus 7"
+CONFIG_WIFI_CREDENTIALS_STATIC_PASSWORD="supertux"
+
+CONFIG_LOG=y
