Disable display driver for now
Seems to cause a connection to return -22?

--- a/platforms/Zephyr/prj.conf
+++ b/platforms/Zephyr/prj.conf
@@ -39,7 +39,7 @@ CONFIG_STM32_ENABLE_DEBUG_SLEEP_STOP=y
 #CONFIG_ESP32_USE_UNSUPPORTED_REVISION=y
 
 # Display drivers
-CONFIG_DISPLAY=y
+CONFIG_DISPLAY=n
 
 # Needed for random number generation primitives
 CONFIG_ENTROPY_GENERATOR=y
