Optimize prj.conf

--- a/platforms/Zephyr/prj.conf
+++ b/platforms/Zephyr/prj.conf
@@ -39,7 +39,7 @@ CONFIG_STM32_ENABLE_DEBUG_SLEEP_STOP=y
 #CONFIG_ESP32_USE_UNSUPPORTED_REVISION=y
 
 # Display drivers
-CONFIG_DISPLAY=n
+CONFIG_DISPLAY=y
 
 # Needed for random number generation primitives
 CONFIG_ENTROPY_GENERATOR=y
@@ -49,12 +49,12 @@ CONFIG_NETWORKING=y
 CONFIG_NET_MGMT=y
 # Optional but useful
 CONFIG_NET_MGMT_EVENT=y
-CONFIG_NET_MGMT_EVENT_INFO=y
+# Optional for cb->info
+CONFIG_NET_MGMT_EVENT_INFO=n
 
 CONFIG_WIFI=y
 CONFIG_NET_L2_WIFI_MGMT=y
-#CONFIG_WIFI_SHELL=n
-#CONFIG_NET_L2_WIFI=y
+CONFIG_NET_SHELL=n
 
 CONFIG_NET_IPV4=y
 CONFIG_NET_IPV6=n
@@ -66,10 +66,7 @@ CONFIG_NET_BUF_TX_COUNT=20
 CONFIG_NET_MAX_CONTEXTS=10
 
 CONFIG_NET_DHCPV4=y
-CONFIG_NET_DHCPV4_LOG_LEVEL_INF=y
-CONFIG_NET_IPV4_LOG_LEVEL_DBG=y
-CONFIG_NET_DHCPV4_LOG_LEVEL_DBG=y
 
 CONFIG_WIFI_CREDENTIALS=n
 
-CONFIG_LOG=y
+CONFIG_LOG=n
